--- a/laxyam/champUH/nItiH/pancha-tantram/en/ryder-arthur/00.md
+++ b/laxyam/champUH/nItiH/pancha-tantram/en/ryder-arthur/00.md
@@ -3,194 +3,105 @@ title = "00 Meta"
 
 +++
 ## TABLE OF CONTENTS
-
-TRANSLATOR’S INTRODUCTION
-
-INTRODUCTION
+- TRANSLATOR’S INTRODUCTION
+- INTRODUCTION
 
 ### BOOK I -- THE LOSS OF FRIENDS
-
-THE LOSS OF FRIENDS
-
-THE WEDGE-PULLING MONKEY
-
-THE JACKAL AND THE WAR-DRUM
-
-MERCHANT STRONG-TOOTH
-
-GODLY AND JUNE
-
-THE JACKAL AT THE RAM-FIGHT
-
-THE WEAVER’S WIFE
-
-How THE CROW-HEN KILLED THE BLACK SNAKE
-
-THE HERON THAT LIKED CRAB-MEAT
-
-NUMSKULL AND THE RABBIT
-
-THE WEAVER WHO LOVED A PRINCESS
-
-THE UNGRATEFUL MAN
-
-LEAP AND CREEP
-
-THE BLUE JACKAL
-
-PASSION AND THE OWL
-
-UGLY’S TRUST ABUSED
-
-THE, LION AND THE CARPENTER
-
-THE PLOVER WHO FOUGHT THE OCEAN’
-
-SHELL-NECK, SLIM, AND GRIM
-
-FORETHOUGHT, READYWIT, AND ATALIST
-
-THE DUEL BETWEEN ELEPHANT AND SPARROW
-
-THE SHREWD OLD ANDE
-
-THE LION AND THE RAM
-
-SMART, THE ACKAL
-
-THE MONK WHO LEFT HIS BODY BEHIND
-
-THE GIRL WHO MARRIED A SNAKE
-
-POOR BLOSSOM
-
-THE UNTEACHABLE MONKEY
-
-RIGHT-MIND AND WRONG-MIND
-
-AREMEDY WORSE THAN THE DISEASE
-
-THE MICE THAT ATE IRON
-
-THE RESULTS OF EDUCATION
-
-THE SENSIBLE ENEMY
-
-THE FOOLISH FRIEND
+- THE LOSS OF FRIENDS
+- THE WEDGE-PULLING MONKEY
+- THE JACKAL AND THE WAR-DRUM
+- MERCHANT STRONG-TOOTH
+- GODLY AND JUNE
+- THE JACKAL AT THE RAM-FIGHT
+- THE WEAVER’S WIFE
+- HOW THE CROW-HEN KILLED THE BLACK SNAKE
+- THE HERON THAT LIKED CRAB-MEAT
+- NUMSKULL AND THE RABBIT
+- THE WEAVER WHO LOVED A PRINCESS
+- THE UNGRATEFUL MAN
+- LEAP AND CREEP
+- THE BLUE JACKAL
+- PASSION AND THE OWL
+- UGLY’S TRUST ABUSED
+- THE LION AND THE CARPENTER
+- THE PLOVER WHO FOUGHT THE OCEAN
+- SHELL-NECK, SLIM, AND GRIM
+- FORETHOUGHT, READYWIT, AND ATALIST
+- THE DUEL BETWEEN ELEPHANT AND SPARROW
+- THE SHREWD OLD GANDER
+- THE LION AND THE RAM
+- SMART, THE JACKAL
+- THE MONK WHO LEFT HIS BODY BEHIND
+- THE GIRL WHO MARRIED A SNAKE
+- POOR BLOSSOM
+- THE UNTEACHABLE MONKEY
+- RIGHT-MIND AND WRONG-MIND
+- A REMEDY WORSE THAN THE DISEASE
+- THE MICE THAT ATE IRON
+- THE RESULTS OF EDUCATION
+- THE SENSIBLE ENEMY
+- THE FOOLISH FRIEND
 
 ### BOOK II - THE WINNING OF FRIENDS
-
-THE WINNING OF FRIENDS
-
-THE BHARUNDA BIRDS
-
-GOLD’S GLOOM
-
-MOTHER’S SHANDILEE’S BARGAIN
-
-SELF-DEFEATING FORTHTHOUGHT
-
-MISTER DULY
-
-SOFT, THE WEVER
-
-HANG BALL AND GREEDY
-
-THE MICE THAT SET ELEPHANTS FREE
-
-SPOT’S CAPACITY
+- THE WINNING OF FRIENDS
+- THE BHARUNDA BIRDS
+- GOLD’S GLOOM
+- MOTHER’S SHANDILEE’S BARGAIN
+- SELF-DEFEATING FORTHTHOUGHT
+- MISTER DULY
+- SOFT, THE WEVER
+- HANG BALL AND GREEDY
+- THE MICE THAT SET ELEPHANTS FREE
+- SPOT’S CAPACITY
 
 ### BOOK III - CROWS AND OWLS
-
-CROWS AND OWLS
-
-HOW THE BIRDS PICKED A KING
-
-HOW THE RABBIT FOOLED THE ELEPHANT
-
-THE CAT’S JUDGEMENT
-
-THE BRAHMAN’S GOAT
-
-THE SNAKE AND THE ANTS
-
-THE SNAKE WHO PAID CASH
-
-THE UNSOCIAL SWANS
-
-THE SELF SACRIFICING DOVE
-
-THE OLD MAN WITH THE YOUNG WIFE
-
-THE BRAHMAN, THE THIDF, AND THE GHOST
-
-THE SNAKE IN THE PRINCE’S BELLY
-
-THE GULLIBLE CARPENTER
-
-MOUSE-MAID MADE HOUSE
-
-THE BIRD WITH GOLDEN DUNG
-
-THE CAVE THAT TALKED
-
-THE FROGS THAT RODE SNAKEBACK
-
-THE BUTTER-BLINDED BRAHMAN
+- CROWS AND OWLS
+- HOW THE BIRDS PICKED A KING
+- HOW THE RABBIT FOOLED THE ELEPHANT
+- THE CAT’S JUDGEMENT
+- THE BRAHMAN’S GOAT
+- THE SNAKE AND THE ANTS
+- THE SNAKE WHO PAID CASH
+- THE UNSOCIAL SWANS
+- THE SELF SACRIFICING DOVE
+- THE OLD MAN WITH THE YOUNG WIFE
+- THE BRAHMAN, THE THIDF, AND THE GHOST
+- THE SNAKE IN THE PRINCE’S BELLY
+- THE GULLIBLE CARPENTER
+- MOUSE-MAID MADE HOUSE
+- THE BIRD WITH GOLDEN DUNG
+- THE CAVE THAT TALKED
+- THE FROGS THAT RODE SNAKEBACK
+- THE BUTTER-BLINDED BRAHMAN
 
 ### BOOK IV - LOSS OF GAINS
-
-LOSS OF GAINS
-
-THE MONKEY AND THE CROCODILE
-
-HANDSOME AND THEODORE
-
-FLOP-EAR AND DUSTY
-
-THE PLOTTER MILITANT
-
-THE JACKAL WHO KILLED NO ELEPHANTS
-
-THE UNGRATEFUL WIFE
-
-KING JOY AND SECRETARY SPLENDOR
-
-THE ASS IN THE TIGER-SKIN
-
-THE FARMER’S WIFE
-
-THE PERT HEN-SPARROW
-
-HOW SUPERSMART ATE THE ELEPHANT
-
-THE DOG WHO WENT ABROAD
+- LOSS OF GAINS
+- THE MONKEY AND THE CROCODILE
+- HANDSOME AND THEODORE
+- FLOP-EAR AND DUSTY
+- THE PLOTTER MILITANT
+- THE JACKAL WHO KILLED NO ELEPHANTS
+- THE UNGRATEFUL WIFE
+- KING JOY AND SECRETARY SPLENDOR
+- THE ASS IN THE TIGER-SKIN
+- THE FARMER’S WIFE
+- THE PERT HEN-SPARROW
+- HOW SUPERSMART ATE THE ELEPHANT
+- THE DOG WHO WENT ABROAD
 
 ### BOOK V - ILL-CONSIDERED ACTION
-
-ILL-CONSIDERED ACTION
-
-THE LOYAL MUNGOOSE
-
-THE FOUR TREASURE-SEEKERS
-
-THE LION-MAKERS
-
-HUNDRED-WIT, THOUSAND-WIT, AND SINGLE-WIT
-
-THE MUSICAL DONKEY
-
-SLOW, THE WEAVER
-
-THE BRAHMAN’S DREAM
-
-THE UNFORGIVING MONKEY
-
-THE CREDULOUS FIEND
-
-THE THREE-BREASTED PRINCESS
-
-THE FIEND WHO WASHED HIS FEET
+- ILL-CONSIDERED ACTION
+- THE LOYAL MUNGOOSE
+- THE FOUR TREASURE-SEEKERS
+- THE LION-MAKERS
+- HUNDRED-WIT, THOUSAND-WIT, AND SINGLE-WIT
+- THE MUSICAL DONKEY
+- SLOW, THE WEAVER
+- THE BRAHMAN’S DREAM
+- THE UNFORGIVING MONKEY
+- THE CREDULOUS FIEND
+- THE THREE-BREASTED PRINCESS
+- THE FIEND WHO WASHED HIS FEET
 
 
 ## Pub note
