--- a/laxyam/rUpakam/sankalpa-sUryodayaH/mUlam/01.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/mUlam/01.md
@@ -227,7 +227,9 @@ title = "01"
 सुमतिः - अय्यउत्त, विरूपा खु जणा णिअमुहदोसं णिम्मळेसु वि दप्यणेसु समप्पन्ति । [आर्यपुत्र, विरूपाः खलु  
 जना निजमुखदोषं निर्मलेष्वपि दर्पणेषु समर्पयन्ति ।]  
 राजा - देवि, सत्यमेतत् । यथार्थदर्शिनी यथादृष्टार्थवादिनी च भवती । किं च,  
-निधूतनिखिलदोषा निरवधिपुरुषार्थलम्भनप्रवणा । सत्कविफणितिरिव त्वं सगुणालङ्कारभावरसजुष्टा ॥ ६५ ॥ (विचिन्त्य) प्रिये, हन्त, निर्विकारपुरुषपीडया क्रीडन्त एते कामक्रोधलोभादयः सुपन्थानमास्थिताः, वयं पुनस्तमेव निश्रेयसे नियोजयितुं समस्तजनसांसिद्धिकसुहृदो भगवतस्तापत्रयाभिहतसर्वजनसंजीविनीं दयादृष्टिमावहन्तः कदध्वना प्रवृत्ताः । अहो! महानयमुन्मत्तालापः । पश्य मे त्वया सह निर्वर्तनीयं परानुग्रहव्रतम् ।  
+निर्धूतनिखिलदोषा निरवधिपुरुषार्थलम्भनप्रवणा ।  
+सत्कविफणितिरिव त्वं सगुणालङ्कारभावरसजुष्टा ॥ ६५ ॥  
+(विचिन्त्य) प्रिये, हन्त, निर्विकारपुरुषपीडया क्रीडन्त एते कामक्रोधलोभादयः सुपन्थानमास्थिताः, वयं पुनस्तमेव निश्रेयसे नियोजयितुं समस्तजनसांसिद्धिकसुहृदो भगवतस्तापत्रयाभिहतसर्वजनसंजीविनीं दयादृष्टिमावहन्तः कदध्वना प्रवृत्ताः । अहो! महानयमुन्मत्तालापः । पश्य मे त्वया सह निर्वर्तनीयं परानुग्रहव्रतम् ।  
 महत्यारम्भेऽस्मिन्मधुरिपुदयासंभृतधृतिर्बहिष्कृत्यारातीन्सुमुखि बहिरन्तश्च भवतः ।  
 समाधावाधाय क्षपितवृजिनं क्षेत्रिणमहं परप्राप्त्या धन्यं परिणमयितुं प्राप्तनियमः ॥ ६६ ॥  
 सुमतिः - अय्यउत्त, कहं सो णिच्चणिम्मळमहाणन्दसअंपहो सव्वजणदंसणजोग्गसहावो पुरुसो महामोहेण माणमदमच्चरप्पमुहेहिं वि दुव्विणीएहिं दुव्वारगव्वसंकुळदुरिअमहोम्मिसंघाअसंघडणभीसणे दुख्खसाअरम्मि णिख्खित्तो [आर्यपुत्र, कथं स नित्यनिर्मलमहानन्दस्वयंप्रभः सर्वजनदर्शनयोग्यस्वभावः पुरुषः महामोहेन मानमदमत्सरप्रमुखैरपि दुर्विनीतैः दुर्वारगर्वसंकुलदुरितमहोर्मिसंघातसंघटनभीषणे दुःखसागरे निक्षिप्तः?  
