--- a/laxyam/rUpakam/sankalpa-sUryodayaH/mUlam/01.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/mUlam/01.md
@@ -244,8 +244,7 @@ title = "01"
 अत्र च,  
 सुखदुःखवाहिनीनां व्यत्ययविनिमयनिवर्तनानर्हे ।  
 नियतक्रमे प्रवाहे निपतितमुत्क्षिप्य मोदते देवः ॥ ६९ ॥  
-सुमतिः - अय्यउत्त, अणादिम्मि गए काले अळद्धपुव्वो मोख्खो अणन्ते वि उवरिअणकाळम्मि केण कहं  
-लहिज्जत्ति सङ्काकळङ्ककब्बुरिअं मे हिअअं । [आर्यपुत्र, अनादौ गते काले अलब्धपूर्वो मोक्षः अनन्तेऽप्युपरितनकाले केन कथं लभ्यत इति शङ्काकलङ्ककर्बुरितं मे हृदयम् ।]  
+सुमतिः - अय्यउत्त, अणादिम्मि गए काले अळद्धपुव्वो मोख्खो अणन्ते वि उवरिअणकाळम्मि केण कहं लहिज्जत्ति सङ्काकळङ्ककब्बुरिअं मे हिअअं । [आर्यपुत्र, अनादौ गते काले अलब्धपूर्वो मोक्षः अनन्तेऽप्युपरितनकाले केन कथं लभ्यत इति शङ्काकलङ्ककर्बुरितं मे हृदयम् ।]  
 राजा - देवि विवेकवल्लभे, अनधिगतप्रमाणतर्कसरणिरिव कथमेवमाशङ्कसे? अथवा,  
 कालस्वभावनियतियदृच्छादिषु वस्तुषु । कारणं किमिवात्रेति तापसैरपि तर्कितम् ॥ ७० ॥  
 इदमत्र तावदवधातव्यम् ।  
