--- a/laxaNam/articles/dhvanyAlokaH/sarva-prastutiH/1.md
+++ b/laxaNam/articles/dhvanyAlokaH/sarva-prastutiH/1.md
@@ -5,31 +5,31 @@ title = "१"
 प्रथम उद्द्योतः ।
 
 श्रीमदानन्दवर्धनाचार्यप्रणीतो ध्वन्यालोकः ।
-श्रीसहृदयतिलकरामशारककृतया
+श्रीसहृदय-तिलक-राम-शारक-कृतया बालप्रियाख्य-टीकयोद्भासितया  
+गोस्वामि-श्री-दामोदर-शास्त्रि-निर्मितया विषम-स्थल-दर्शिन्या दिव्याञ्जनाख्य-टिप्पन्योक्तया च  
+श्रीमदाचार्याभिनवगुप्त-विरचितया लोचनाख्यया व्याख्यया ऽनुगतः ।
 
-बालप्रिया
-
-ख्यटीकयोद्भासितया गोस्वामिश्रीदामोदरशास्त्रिनिर्मितया विषमस्थलदर्शन्या विषमस्थलदर्शिन्या दिव्याञ्जनाख्यटिप्पन्योक्तया च श्रीमदाचार्याभिनवगुप्तविरचितया लोचनाख्यया व्याख्ययानुगतः ।
 प्रथम उद्द्योतः ।
 
-श्रीमदाचार्याभिनवगुप्तकृतं
+श्रीमदाचार्याभिनवगुप्तकृतं लोचनं
 
-लोचनं
+श्रीभारत्यै नमः॥  
 
-श्रीभारत्यै नमः अपूर्वं यद्वस्तु प्रथयति विना कारणकलां जगद्भावप्रख्यं निजरसभरात्सारयति च ।
-क्रमात्प्रख्योपाख्याप्रसरसुभगं भासयति त त्सरस्वत्यास्तत्त्वं कविसहृदयाख्यं विजयते  ॥
-श्रीसहृदयतिलकरामशारककृतबालप्रिय्.आ श्रीगुरवे नमः श्रीगुरून्पूर्णवेदेशं सङ्गमेशञ्च माधवम् ।
+अ-पूर्वं यद् वस्तु **प्रथयति** विना कारण-कलां  
+जगद्-भाव-प्रख्यं निज-रस-भरात् **सारयति** च ।
+क्रमात् प्रख्योपाख्या-प्रसर-सुभगं **भासयति** तत्  
+सरस्वत्यास् तत्त्वं कवि-सहृदयाख्यं **विजयते**  ॥+++(5)+++
+
+श्रीसहृदयतिलकरामशारककृतबालप्रिया  
+श्रीगुरवे नमः श्रीगुरून्पूर्णवेदेशं सङ्गमेशञ्च माधवम् ।
 शिवं शिवाञ्च नम्रणां कामधेनुम्मुहुर्नुमः ॥
 काव्यालोको लोचनञ्च द्वे ग्राह्यग्राहके सताम् ।
 तद्गन्थकारावाचार्यौ रसिकाग्रेसरौ स्तुमः ॥
 लोचनस्यादिमोद्द्योतमात्रस्यात्र पुरा कृता ।
 विवृतिर्लभ्यते तत्तां दृष्ट्वा ग्रन्थान्तराणि च ॥
 पाठान्केरलविख्यातानालम्ब्य च यथामति ।
-कुर्मो
+कुर्मो बालप्रियां प्रायः प्रौढलोचनटिप्पनीम् ॥
 
-बालप्रिया
-
-ं प्रायः प्रौढलोचनटिप्पनीम् ॥
 अथ तत्रभवन्तः श्रीमदाचार्याभिनवगुप्तपादाः काव्यालोकव्याख्यानञ्चिकीर्षवस्तस्य निर्विघ्नपरिसमाप्तये विहितं समुचितेष्टदेवतानमस्कारात्मकम्मङ्गलं शिष्यशिङ्क्षायै ग्रन्थतोनिबध्नन्त्यपूर्वमित्यादि ।
 यतुकमलमनम्भसि कमलेत्यादिकाव्यात्मकं सरस्वतीतत्त्वम्, कारणकलां वि
 
@@ -120,7 +120,7 @@ title = "१"
 
 बालप्रिया
 
-शक्तिःुसामर्थ्यं येषां तेषां भावस्तत्ता, शक्ततेति च पाठः - व्यङ्ग्यान्तरमप्याहध्वनितश्चेति, उक्तव्यङ्गक्येनेति शेषः, व्यतिरिक्तकरणेति ।
+शक्तिः सामर्थ्यं येषां तेषां भावस्तत्ता, शक्ततेति च पाठः - व्यङ्ग्यान्तरमप्याहध्वनितश्चेति, उक्तव्यङ्गक्येनेति शेषः, व्यतिरिक्तकरणेति ।
 बाह्यखड्गादित्यर्थः, जगत्र्रासेति ।
 तत्तद्दुर्जनेभ्यो जगतो यस्त्रासः तदपसारणे य उद्यमः स इत्यर्थः, उक्त इति ।
 व्यञ्जित इत्यर्थः, इममर्थं मनसिकृत्य पूर्वं नित्योद्योगिन इत्युक्तमिति बोध्यम्, न तु कर्मपारतन्त्र्येणेत्यादेः स्वीकृतेत्यत्र सम्बन्धः, आद्यमिच्छापदेन द्वितीयं स्वपदेन च गम्यमिति बोध्यम्, विशिष्टेति विशिष्टंुदानवान्तरहननापेक्षया विशेषवत्, दानवस्यौहिरण्यकशिपोर्हननं यद्वा विशिष्टःुसुरनरतिर्यगाद्यवध्यत्वरूपविशेषवान् यो दानवस्तस्य हननं तस्मिन्नुचितो यस्तथाविधायाःुनरहरिविग्रहावलम्बनविषयिकाया इच्छायाः परिग्रहः, उचितेतीच्छाविशेषणं वा तस्मिन् यदौचित्यामर्थात्स्वस्य तस्माद्धेतोरित्यर्थः, स्वीकृतसिंहरूपस्येति ।
@@ -196,7 +196,9 @@ __________
 
 
 
-लोचनमथ प्राधान्येनाभिधेयस्वरूपमभिदधदप्रधानतया प्रयोजनप्रयोजनं तत्सम्बद्धं प्रयोजनं च सामर्थ्यात्प्रकटयन्नादिवाक्यमाहकाव्यस्यात्मेति ।
+लोचनम् 
+
+अथ प्राधान्येनाभिधेयस्वरूपमभिदधदप्रधानतया प्रयोजनप्रयोजनं तत्सम्बद्धं प्रयोजनं च सामर्थ्यात्प्रकटयन्नादिवाक्यमाहकाव्यस्यात्मेति ।
 काव्यात्मशब्दसंनिधानाद्बुधसब्दोऽत्र काव्यात्मावबोधनिमित्तक इत्यभिप्रायेण विवृणोतिकाव्यतत्त्वविद्भिरिति ।
 
 
